# joystick_linux_fake

./: JOYSTICK_SETUP.md  LICENSE  README.md  dummy_joystick.py  pyproject.toml  requirements.txt  watch_js.py
src/: joystick_parser.py
src/joystick_linux_fake/: __init__.py  __main__.py  cli.py  controller.py  device.py  gui.py  simulations.py  state.py
src/joystick_parser_cpp/: joystick_parser.hpp
src/joystick_watch/: __init__.py  __main__.py  app.py  tk_scaling.py
src/joystick_watch/configs/joystick_mappings/: ps5.yaml  xbox.yaml
tests/: test_cli.py  test_joystick_parser.py  test_joystick_watch.py  test_simulations.py
tests/legacy/: JOYSTICK_SETUP.md  dummy_joystick.py
